--- a/server/views/partials/case-details.njk
+++ b/server/views/partials/case-details.njk
@@ -15,9 +15,9 @@
         active: title === 'Probation record'
     }) }}
     {{ subNavItems.push({
-        text: 'Risk registers',
+        text: 'Risk register',
         href: '/case/' + data.caseNo + '/risk',
-        active: title === 'Risk registers'
+        active: title === 'Risk register'
     }) }}
 {% endif %}
 {% set crn = [] %}
