--- a/server/views/case-summary-risk.njk
+++ b/server/views/case-summary-risk.njk
@@ -5,7 +5,7 @@
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
 
-            <h2 class="govuk-heading-m">Risk registers</h2>
+            <h2 class="govuk-heading-m">Risk register</h2>
 
         </div>
         <div class="govuk-grid-column-one-third">&nbsp;</div>
