:sparkles: Hide filters on recently added and removed case list views
Signed-off-by: Paul Massey <paul.massey@digital.justice.gov.uk>

--- a/server/views/case-list.njk
+++ b/server/views/case-list.njk
@@ -183,11 +183,13 @@
         status: status
     }) }}
 
-    {%- from "components/filter/macro.njk" import pacFilter -%}
-    {{ pacFilter({
-        formName: 'listFilterForm',
-        filters: params.filters
-    }) }}
+    {% if params.subsection === '' %}
+        {%- from "components/filter/macro.njk" import pacFilter -%}
+        {{ pacFilter({
+            formName: 'listFilterForm',
+            filters: params.filters
+        }) }}
+    {% endif %}
 
     {% if tableData.rows | length %}
         {% block table %}
