:sparkles: PIC-541: Added code to get user info

--- a/server/views/partials/layout.njk
+++ b/server/views/partials/layout.njk
@@ -52,7 +52,7 @@
     navigation: {
       label: 'Account navigation',
       items: [{
-          text: userName,
+          text: user.displayName,
           href: '/',
           active: true
       }, {
