--- a/server/views/components/tabs/template.njk
+++ b/server/views/components/tabs/template.njk
@@ -6,7 +6,7 @@
         {% for item in params.items %}
         <li class="govuk-tabs__list-item{% if item.current %} govuk-tabs__list-item--selected{% endif %}" role="presentation">
             <{% if item.current %}span{% else%}a href="{{ item.link }}"{% endif%} class="govuk-link govuk-link--no-visited-state govuk-tabs__tab" id="tab_{{ loop.index }}" role="tab" aria-selected="true">
-                {{ item.title }} {{ '(' + item.count + ')' if item.count }}
+                {{ item.title }} {{ '(' + item.count + ')' if item.count >= 0 }}
             </{% if item.current %}span{% else%}a{% endif%}>
         </li>
         {% endfor %}
