--- a/public/stylesheets/app/all.scss
+++ b/public/stylesheets/app/all.scss
@@ -1,6 +1,7 @@
 @import "overrides";
 @import "badge";
 @import "filter";
+@import "inset-text";
 @import "key-details";
 @import "last-updated";
 @import "pagination";
