--- a/server/views/partials/layout.njk
+++ b/server/views/partials/layout.njk
@@ -90,6 +90,10 @@
 {% block keydetails %}{% endblock %}
 
 <div class="govuk-width-container">
+    {% block backlink %}{% endblock %}
+</div>
+
+<div class="govuk-width-container">
   <main class="govuk-main-wrapper" id="main-content" role="main">
     {% block content %}{% endblock %}
   </main>
