:sparkles: Included match defendant journey
Includes basic support and UI for PIC-611 and PIC-612 but no tests
Updated mocks
Added BDD tests
Fixed jest config

Signed-off-by: Paul Massey <paul.massey@digital.justice.gov.uk>

--- a/public/stylesheets/app/all.scss
+++ b/public/stylesheets/app/all.scss
@@ -1,6 +1,7 @@
 @import "overrides";
 @import "badge";
 @import "filter";
+@import "inset-block";
 @import "inset-text";
 @import "key-details";
 @import "last-updated";
