--- a/server/views/partials/layout.njk
+++ b/server/views/partials/layout.njk
@@ -6,7 +6,7 @@
 <html lang="en" class="govuk-template no-js">
 <head>
 
-  {% set mainTitle = "Prepare a case for court" %}
+  {% set mainTitle = "Prepare a case for sentence" %}
 
     {% block head %}
         <meta charset="utf-8"/>
