--- a/public/stylesheets/app/_overrides.scss
+++ b/public/stylesheets/app/_overrides.scss
@@ -2,6 +2,16 @@
   @extend .govuk-link--no-visited-state;
 }
 
+.govuk-table.pac-table--no-borders {
+  th, td {
+    border: 0;
+  }
+}
+
+.pac-\!-border-left {
+  border-left: 2px solid govuk-colour("mid-grey");
+}
+
 body.js-enabled {
   .moj-js-hidden {
     @include govuk-visually-hidden;
