--- a/server/views/case-summary.njk
+++ b/server/views/case-summary.njk
@@ -8,6 +8,16 @@
     </h2>
 {% endset %}
 
+{% block backlink %}
+
+    {%- from "govuk/components/back-link/macro.njk" import govukBackLink -%}
+    {{ govukBackLink({
+        text: "Back to cases",
+        href: '/cases/' + caseListDate
+    }) }}
+
+{% endblock %}
+
 {% block caseContent %}
 
     {% if data.numberOfPossibleMatches > 0 %}
@@ -21,7 +31,7 @@
 
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-full">
-            <h1 class="govuk-heading-l">Case details</h1>
+            <h1 class="govuk-heading-l">Case summary</h1>
         </div>
     </div>
 
