:lipstick: PIC-652: Added back to cases link to probation record and risk register

--- a/server/views/case-summary-record-order.njk
+++ b/server/views/case-summary-record-order.njk
@@ -112,6 +112,8 @@
     {% endfor %}
 {% endif %}
 
+{% block backlink %}{% endblock %}
+
 {% block caseContent %}
 
     {%- from "govuk/components/back-link/macro.njk" import govukBackLink -%}
