:green_heart Fix failed integration test

--- a/server/views/case-summary-record-order-breach.njk
+++ b/server/views/case-summary-record-order-breach.njk
@@ -3,6 +3,8 @@
 
 {%- set moment = params.moment -%}
 
+{% block backlink %}{% endblock %}
+
 {% block caseContent %}
 
     {%- set breach = data.communityData -%}
