--- a/server/views/case-summary.njk
+++ b/server/views/case-summary.njk
@@ -32,7 +32,11 @@
         }) }}
     {% endif %}
 
-    <h1 class="govuk-heading-l">Case details</h1>
+    <div class="govuk-grid-row">
+        <div class="govuk-grid-column-full">
+            <h1 class="govuk-heading-l">Case summary</h1>
+        </div>
+    </div>
 
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
