--- a/server/views/partials/case-details.njk
+++ b/server/views/partials/case-details.njk
@@ -3,9 +3,9 @@
 {%- set moment = params.moment -%}
 
 {% set subNavItems = [{
-    text: 'Case details',
-    href: '/case/' + data.caseNo + '/details',
-    active: title === 'Case details'
+    text: 'Case summary',
+    href: '/case/' + data.caseNo + '/summary',
+    active: title === 'Case summary'
 }] %}
 
 {% if data.probationStatus === 'Current' or data.probationStatus === 'Previously known' %}
@@ -47,6 +47,16 @@
         probationStatus: probationStatus,
         numberOfPossibleMatches: data.numberOfPossibleMatches,
         breach: breach
+    }) }}
+
+{% endblock %}
+
+{% block backlink %}
+
+    {%- from "govuk/components/back-link/macro.njk" import govukBackLink -%}
+    {{ govukBackLink({
+        text: "Back to cases",
+        href: '/cases/' + caseListDate
     }) }}
 
 {% endblock %}
