:lipstick: Updated UI to match prototype
Signed-off-by: Paul Massey <paul.massey@digital.justice.gov.uk>

--- a/public/stylesheets/app/_inset-block.scss
+++ b/public/stylesheets/app/_inset-block.scss
@@ -2,5 +2,5 @@
   background: govuk-colour("light-grey");
   border-left: 4px solid govuk-colour("mid-grey");
   border-bottom: 1px solid govuk-colour("mid-grey");
-  padding: 5px 20px;
+  padding: 10px 0;
 }
