--- a/server/views/match-records.njk
+++ b/server/views/match-records.njk
@@ -30,13 +30,15 @@
 
 {% endblock %}
 
-{% block content %}
-
+{% block message %}
     {%- from "components/match-confirmation/macro.njk" import pacMatchConfirmation -%}
     {{ pacMatchConfirmation({
         matchName: session.confirmedMatch.name,
         probationStatus: session.confirmedMatch.probationStatus
     }) }}
+{% endblock %}
+
+{% block content %}
 
     <h1 class="govuk-heading-l">Defendants with possible nDelius records</h1>
 
