--- a/server/views/match-defendant.njk
+++ b/server/views/match-defendant.njk
@@ -57,7 +57,7 @@
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-one-half pac-!-grid-column-45 govuk-!-padding-right-9">
 
-                <h3 class="govuk-heading-m govuk-!-margin-top-2">Defendant details</h3>
+                <h3 class="govuk-heading-m">Defendant details</h3>
 
                 <div class="pac-inset-block">
                     <table class="govuk-table pac-table--no-borders govuk-!-margin-0">
@@ -87,7 +87,7 @@
                     {% call govukFieldset({
                         legend: {
                             text: data.matchData | length + " nDelius records found",
-                            classes: "govuk-fieldset__legend--m",
+                            classes: "govuk-fieldset__legend--m govuk-!-margin-bottom-4",
                             isPageHeading: false
                         }
                     }) %}
