--- a/public/stylesheets/app/_pagination.scss
+++ b/public/stylesheets/app/_pagination.scss
@@ -3,12 +3,26 @@
   @extend .govuk-link--no-visited-state;
   @extend .govuk-\!-font-size-19;
   text-decoration: none;
+  padding: 15px 0 15px 15px;
+  margin-left: -15px;
 }
 
 .pac-pagination-link--icon {
-  margin: 0 10px;
+  margin-right: 8px;
+}
+
+pac-pagination-link--next {
+  margin-left: 8px;
 }
 
 .pac-pagination-link--text {
-  margin-top: 0;
+  margin-right: 10px;
+}
+
+.pac-pagination-link:hover {
+  background-color: #f3f2f1;
+ }
+
+.pac-pagination-link:focus {
+  background-color: #fadc4b;
 }
