--- a/server/views/case-list.njk
+++ b/server/views/case-list.njk
@@ -32,7 +32,7 @@
     {% endif %}
     {%- set tableRow = [
             { text: ('<a href="/case/' + item.caseNo + '/summary" class="pac-defendant-link govuk-link govuk-link--no-visited-state">' + item.defendantName | escape + '</a>') | safe },
-            { text: ('<div>' + ('<span class="moj-badge moj-badge--red pac-badge">Possible nDelius Record</span>' | safe if item.numberOfPossibleMatches) + ('<span class="moj-badge moj-badge--black pac-badge">Breach</span>' | safe if item.breach) + ('<span class="moj-badge moj-badge--black pac-badge" style="">Sso</span>' | safe if item.suspendedSentenceOrder) + '</div>'+ item.probationStatus + ('<span data-cy="previously-known-termination-date" class="govuk-caption-m">Order ended ' + moment(item.previouslyKnownTerminationDate).format("D MMMM YYYY") | escape + '</span>' if item.previouslyKnownTerminationDate)) | safe },
+            { text: ('<div>' + ('<span class="moj-badge moj-badge--red pac-badge">Possible nDelius Record</span>' | safe if item.numberOfPossibleMatches) + ('<span class="moj-badge moj-badge--black pac-badge">Breach</span>' | safe if item.breach) + ('<span class="moj-badge moj-badge--black pac-badge">Sso</span>' | safe if item.suspendedSentenceOrder) + '</div>'+ item.probationStatus + ('<span data-cy="previously-known-termination-date" class="govuk-caption-m">Order ended ' + moment(item.previouslyKnownTerminationDate).format("D MMMM YYYY") | escape + '</span>' if item.previouslyKnownTerminationDate)) | safe },
             { text: offences | join('') | safe },
             { text: item.listNo },
             { text: item.session | capitalize },
@@ -93,7 +93,8 @@
 
 {% block content %}
 
-    {% set dateFormat = 'dddd D MMM' %}
+    {% set dateFormat = 'dddd D MMMM' %}
+    {% set timeStampDateFormat = 'ddd D MMM' %}
     {% set currentDate = moment(params.date, 'YYYY-MM-DD') %}
     {% set today = moment().format('YYYY-MM-DD') %}
     {% set tomorrow = moment().add(1, 'days').format('YYYY-MM-DD') %}
@@ -116,12 +117,12 @@
                 <svg class="pac-pagination-link--icon" xmlns="http://www.w3.org/2000/svg" height="13" width="17" viewBox="0 0 17 13">
                     <path fill="currentColor" d="m6.5938-0.0078125-6.7266 6.7266 6.7441 6.4062 1.377-1.449-4.1856-3.9768h12.896v-2h-12.984l4.2931-4.293-1.414-1.414z"></path>
                 </svg>
-                <span class="pac-pagination-link---text">Previous day</span>
+                <span class="pac-pagination-link--text">Previous day</span>
             </a>
         {% endif %}
         {% if withinDateRange %}
             <a class="pac-pagination-link" href="/cases/{{ params.addBusinessDays(currentDate, 1).format('YYYY-MM-DD') }}">
-                <span class="pac-pagination-link---text">Next day</span>
+                <span class="pac-pagination-link--next pac-pagination-link--text">Next day</span>
                 <svg class="pac-pagination-link--icon" xmlns="http://www.w3.org/2000/svg" height="13" width="17" viewBox="0 0 17 13">
                     <path fill="currentColor" d="m10.107-0.0078125-1.4136 1.414 4.2926 4.293h-12.986v2h12.896l-4.1855 3.9766 1.377 1.4492 6.7441-6.4062-6.7246-6.7266z"></path>
                 </svg>
@@ -140,7 +141,7 @@
 
     {%- from "components/tabs/macro.njk" import pacTabs -%}
 
-    {% set nextUpdate = currentDate.format('[Next scheduled update:] '+ dateFormat + ' [at 9:00am]') %}
+    {% set nextUpdate = currentDate.format('[Next scheduled update:] '+ timeStampDateFormat + ' [at 9:00am]') %}
     {% if params.date === tomorrow %}
         {% set nextUpdate = 'Next scheduled update: Tomorrow at 9:00am' %}
     {% endif %}
@@ -154,7 +155,7 @@
         {% if moment().add(-1, 'days').format('YYYY-MM-DD') === moment(params.lastUpdated).format('YYYY-MM-DD') %}
             {% set lastUpdated = moment(params.lastUpdated).format('[List updated: Yesterday at] hh:mma') %}
         {% else %}
-            {% set lastUpdated = moment(params.lastUpdated).format('[List updated:] ' + dateFormat + ' [at] hh:mma') %}
+            {% set lastUpdated = moment(params.lastUpdated).format('[List updated:] ' + timeStampDateFormat + ' [at] hh:mma') %}
         {% endif %}
         {% if params.date === today %}
             {% set nextUpdate = 'Next scheduled update: Today at 9:00am' %}
@@ -182,7 +183,7 @@
     {% endif -%}
 
     {% if params.totalCount %}
-        {% set status = lastUpdated + ' | ' + nextUpdate %}
+        {% set status = ("<p class=\"govuk-body-s govuk-!-margin-bottom-1 pac-last-updated-stamp\">" + (lastUpdated | escape) + "</p>" + "<p class=\"govuk-body-s govuk-!-margin-bottom-0 pac-next-update-stamp\">" + (nextUpdate | escape) + "</p>") | safe %}
     {% else %}
         {% set status = "" %}
     {% endif %}
