--- a/server/views/components/key-details-bar/template.njk
+++ b/server/views/components/key-details-bar/template.njk
@@ -5,7 +5,7 @@
       {% if params.crn | length %}
         <span class="govuk-body pac-key-details-bar__divider"><strong>CRN: </strong>{{ params.crn }}</span>
       {% endif %}
-      {% if params.pnc and not params.numberOfPossibleMatches %}
+      {% if params.pnc and not params.numberOfPossibleMatches and not (params.probationStatus == 'No record') %}
         <span class="govuk-body pac-key-details-bar__divider"><strong>PNC: </strong>{{ params.pnc }}</span>
       {% endif %}
       {% if params.numberOfPossibleMatches %}
@@ -15,9 +15,6 @@
     <div class="pac-key-details-bar__bottom-block">
       {% if params.probationStatus and not params.numberOfPossibleMatches %}
         <span class="govuk-body pac-key-details-bar__divider"><strong>Probation status: </strong>{{ params.probationStatus }}{% if params.breach  %} (Breach){% endif %}</span>
-      {% endif %}
-      {% if params.dob and not params.numberOfPossibleMatches %}
-        <span class="govuk-body pac-key-details-bar__divider"><strong>Date of birth: </strong>{{ params.dob }}</span>
       {% endif %}
     </div>
   </div>
