--- a/server/views/partials/layout.njk
+++ b/server/views/partials/layout.njk
@@ -53,13 +53,7 @@
       {
         text: 'Cases',
         href: '/cases',
-        active: title === 'Cases' or
-          title === 'Case details' or
-          title === 'Personal details' or
-          title === 'Probation record' or
-          title === 'Risk registers' or
-          title === 'Order details' or
-          title === 'Breach details'
+        active: title === 'Cases'
       }
     ],
     searchHtml: currentCourtHtml
