--- a/server/views/case-summary.njk
+++ b/server/views/case-summary.njk
@@ -8,22 +8,14 @@
     </h2>
 {% endset %}
 
-{% block caseContent %}
+{% block message %}
+    {%- from "components/match-confirmation/macro.njk" import pacMatchConfirmation -%}
+    {{ pacMatchConfirmation({
+        matchName: session.confirmedMatch.name,
+        probationStatus: session.confirmedMatch.probationStatus
+    }) }}
 
-    {% if session.confirmedMatchName %}
-    <div class="govuk-grid-row">
-        <div class="govuk-grid-column-two-thirds">
-        {%- from "moj/components/banner/macro.njk" import mojBanner -%}
-        {{ mojBanner({
-            type: 'success',
-            text: 'You have successfully confirmed a record for ' + session.confirmedMatchName,
-            iconFallbackText: 'Success'
-        }) }}
-        </div>
-    </div>
-    {% endif %}
-
-    {% if data.numberOfPossibleMatches > 0 and not session.confirmedMatchName %}
+    {% if data.numberOfPossibleMatches > 0 and not session.confirmedMatch.name %}
         {%- from "moj/components/banner/macro.njk" import mojBanner -%}
         {{ mojBanner({
             classes: 'govuk-!-display-inline-block',
@@ -31,6 +23,9 @@
             html: bannerHtml
         }) }}
     {% endif %}
+{% endblock %}
+
+{% block caseContent %}
 
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-full">
