--- a/server/views/partials/header.html
+++ b/server/views/partials/header.html
@@ -14,7 +14,7 @@
 
       <a class="moj-header__link moj-header__link--organisation-name" href="/index">HMPPS</a>
 
-      <a class="moj-header__link moj-header__link--service-name" href="/">Prepare a case for sentence</a> <div class="pac-phase-tag"><strong class="govuk-tag">Beta</strong></div>
+    <a class="moj-header__link moj-header__link--service-name" href="/">Prepare a case for sentence</a> <div class="pac-phase-tag"><strong class="govuk-tag pac-header-tag">Beta</strong></div>
 
     </div>
     <div class="moj-header__content">
