--- a/server/views/partials/case-details.njk
+++ b/server/views/partials/case-details.njk
@@ -2,23 +2,26 @@
 
 {%- set moment = params.moment -%}
 
-{% set subNavItems = [{
-    text: 'Case summary',
-    href: '/case/' + data.caseNo + '/summary',
-    active: title === 'Case summary'
-}] %}
+{% set subNavItems = [] %}
 
 {% if data.probationStatus === 'Current' or data.probationStatus === 'Previously known' %}
+    {{ subNavItems.push({
+        text: 'Case summary',
+        href: '/case/' + data.caseNo + '/summary',
+        active: title === 'Case summary'
+    }) }}
     {{ subNavItems.push({
         text: 'Probation record',
         href: '/case/' + data.caseNo + '/record',
         active: title === 'Probation record'
     }) }}
+    {#
     {{ subNavItems.push({
         text: 'Risk register',
         href: '/case/' + data.caseNo + '/risk',
         active: title === 'Risk register'
     }) }}
+    #}
 {% endif %}
 {% set crn = [] %}
 {{ crn.push(data.crn) if data.crn }}
@@ -43,7 +46,6 @@
         title: data.defendantName,
         crn: crn,
         pnc: pnc,
-        dob: dob,
         probationStatus: probationStatus,
         numberOfPossibleMatches: data.numberOfPossibleMatches,
         breach: breach
