:art: Modify subnavigation to display if there is a crn
Signed-off-by: Paul Massey <paul.massey@digital.justice.gov.uk>

--- a/server/views/partials/case-details.njk
+++ b/server/views/partials/case-details.njk
@@ -4,7 +4,7 @@
 
 {% set subNavItems = [] %}
 
-{% if data.probationStatus === 'Current' or data.probationStatus === 'Previously known' %}
+{% if data.crn %}
     {{ subNavItems.push({
         text: 'Case summary',
         href: '/case/' + data.caseNo + '/summary',
