--- a/server/views/error.njk
+++ b/server/views/error.njk
@@ -3,7 +3,29 @@
 {% set title = "Error" %}
 
 {% block content %}
-  <h1 class="govuk-heading-l">{{ message }}</h1>
-  <h2 class="govuk-heading-m">{{ error.status }}</h2>
-  <pre>{{ error.stack }}</pre>
+  {% if status === 404  %}
+    <h1 class="govuk-heading-l">
+      Page not found
+    </h1>
+    <p class="govuk-body">If you entered a web address, check it is correct.</p>
+    <p class="govuk-body">You can <a class="govuk-link" href="/cases">go to the home page </a> to find the information you need.</p>
+  {% endif %}
+
+  {% if status === 500  %}
+    <h1 class="govuk-heading-l">
+      Sorry, there is a problem with the service
+    </h1>
+    <p class="govuk-body">Please try again later.</p>
+  {% endif %}
+
+  {% if status === 503  %}
+    <h1 class="govuk-heading-l">
+      Sorry, the service is unavailable
+    </h1>
+    <p class="govuk-body">You'll be able to use the service on {{ maintenanceDate }}.</p>
+  {% endif %}
+
+  <p class="govuk-body">{{ message }}</p>
+  <p class="govuk-body">{{ stack }}</p>
+
 {% endblock %}
