:bug: Corrected header link
Signed-off-by: Paul Massey <paul.massey@digital.justice.gov.uk>

--- a/server/views/partials/header.html
+++ b/server/views/partials/header.html
@@ -15,9 +15,7 @@
 
             </svg>
 
-            <a class="moj-header__link moj-header__link--organisation-name" href="/index">HMPPS</a>
-
-
+            <a class="moj-header__link moj-header__link--organisation-name" href="/">HMPPS</a>
             <a class="moj-header__link moj-header__link--service-name" href="/">Prepare a case for sentence</a>
             <div class="pac-phase-tag"><strong class="govuk-tag pac-header-tag">Beta</strong></div>
 
