--- a/server/views/case-list.njk
+++ b/server/views/case-list.njk
@@ -19,6 +19,7 @@
 {% for item in data %}
 
     {% set offences = [] %}
+    {% set courtRoom = item.courtRoom - 0 %}
     {% if item.offences | length === 1 %}
         {% for offence in item.offences %}
             {{ offences.push(offence.offenceTitle | escape) }}
@@ -32,11 +33,11 @@
     {% endif %}
     {%- set tableRow = [
             { text: ('<a href="/case/' + item.caseNo + '/summary" class="pac-defendant-link govuk-link govuk-link--no-visited-state">' + item.defendantName | escape + '</a>') | safe },
-            { text: ('<div>' + ('<span class="moj-badge moj-badge--red pac-badge">Possible nDelius Record</span>' | safe if item.numberOfPossibleMatches) + ('<span class="moj-badge moj-badge--black pac-badge">Breach</span>' | safe if item.breach) + ('<span class="moj-badge moj-badge--black pac-badge">Sso</span>' | safe if item.suspendedSentenceOrder) + '</div>'+ item.probationStatus + ('<span data-cy="previously-known-termination-date" class="govuk-caption-m">Order ended ' + moment(item.previouslyKnownTerminationDate).format("D MMMM YYYY") | escape + '</span>' if item.previouslyKnownTerminationDate)) | safe },
+            { text: ('<div>' + ('<span class="moj-badge moj-badge--red pac-badge">Possible nDelius Record</span>' | safe if item.numberOfPossibleMatches) + ('<span class="moj-badge moj-badge--black pac-badge">Breach</span>' | safe if item.breach) + ('<span class="moj-badge moj-badge--black pac-badge">Sso</span>' | safe if item.suspendedSentenceOrder) + '</div>'+ (item.probationStatus | capitalize) + ('<span data-cy="previously-known-termination-date" class="govuk-caption-m">Order ended ' + moment(item.previouslyKnownTerminationDate).format("D MMMM YYYY") | escape + '</span>' if item.previouslyKnownTerminationDate)) | safe },
             { text: offences | join('') | safe },
             { text: item.listNo },
             { text: item.session | capitalize },
-            { text: item.courtRoom, format: "numeric" }
+            { text: courtRoom, format: "numeric"}
     ] -%}
     {%- if params.subsection === 'removed' %}
         {{ tableRow.push({ text: item.caseNo, format: "numeric" }) }}
