:sparkles: Included match link confirmation messages
Included a11y testing for the matching journeys

Signed-off-by: Paul Massey <paul.massey@digital.justice.gov.uk>

--- a/server/views/case-summary.njk
+++ b/server/views/case-summary.njk
@@ -13,7 +13,7 @@
     {%- from "components/match-confirmation/macro.njk" import pacMatchConfirmation -%}
     {{ pacMatchConfirmation({
         matchName: session.confirmedMatch.name,
-        probationStatus: session.confirmedMatch.probationStatus
+        matchType: session.confirmedMatch.matchType
     }) }}
 
     {% if data.numberOfPossibleMatches > 0 and not session.confirmedMatch.name %}
