:bug: Fixed issue causing nationality to not display correctly
Signed-off-by: Paul Massey <paul.massey@digital.justice.gov.uk>

--- a/server/views/case-summary.njk
+++ b/server/views/case-summary.njk
@@ -108,7 +108,7 @@
                         Nationality
                     </dt>
                     <dd class="govuk-summary-list__value">
-                        {{ data.nationality_1 or "Unknown" }}{{ " / " + data.nationality_2 if data.nationality_2 }}
+                        {{ data.nationality1 or "Unknown" }}{{ " / " + data.nationality2 if data.nationality2 }}
                     </dd>
                 </div>
                 <div class="govuk-summary-list__row">
