--- a/server/views/match-defendant.njk
+++ b/server/views/match-defendant.njk
@@ -134,7 +134,7 @@
                                         </tr>
                                         <tr class="govuk-table__row">
                                             <th scope="row" class="govuk-table__header">Most recent event</th>
-                                            <td class="govuk-table__cell">{{ params.moment(item.mostRecentEvent.date, 'YYYY-MM-DD').format('D MMMM YYYY') }} {{ "- " + item.mostRecentEvent.text if item.mostRecentEvent.text }} {{ "(" + item.mostRecentEvent.length + " " + item.mostRecentEvent.lengthUnits + ")" if item.mostRecentEvent.length }}</td>
+                                            <td class="govuk-table__cell">{{ params.moment(item.mostRecentEvent.startDate, 'YYYY-MM-DD').format('D MMMM YYYY') }}{{ " - " + item.mostRecentEvent.text if item.mostRecentEvent.text }} {{ "(" + item.mostRecentEvent.length + " " + item.mostRecentEvent.lengthUnits + ")" if item.mostRecentEvent.length }}</td>
                                         </tr>
                                         </tbody>
                                     </table>
