--- a/public/stylesheets/app/_key-details.scss
+++ b/public/stylesheets/app/_key-details.scss
@@ -1,12 +1,16 @@
 .pac-key-details-bar {
   background-color: $govuk-brand-colour;
-
-  * {
-    color: govuk-colour("white");
+  
+  &__right-block{
+    float: right;
+    @include govuk-clearfix();
   }
 
   &__top-block, &__bottom-block {
     @extend .govuk-clearfix;
+    h1, .govuk-body {
+      color: govuk-colour("white");
+    }
   }
 
   &__bottom-block {
