--- a/server/views/components/key-details-bar/template.njk
+++ b/server/views/components/key-details-bar/template.njk
@@ -1,12 +1,18 @@
 <section class="pac-key-details-bar" aria-label="Key details">
   <div class="pac-key-details-bar__key-details">
-  {% if params.probationStatus == 'No record' %}
-   <div class="pac-key-details-bar__right-block">
-      <form method="get" action="/match/defendant/{{ params.caseNo }}/manual"><button class="govuk-button govuk-button--secondary govuk-!-margin-bottom-0" data-module="govuk-button" type="submit">
-        Link nDelius record
-      </button>
-      </form>
-    </div>
+    
+    {% if params.probationStatus == 'No record' %}
+      <div class="pac-key-details-bar__right-block">
+        <form method="get" action="/match/defendant/{{ params.caseNo }}/manual">
+          <button class="govuk-button govuk-button--secondary govuk-!-margin-bottom-0" data-module="govuk-button" type="submit">Link nDelius record</button>
+        </form>
+      </div>
+    {% elif params.probationStatus == 'Previously known' or 'Current' %}
+      <div class="pac-key-details-bar__right-block">
+        <form method="get" action="/match/defendant/{{ params.caseNo }}/manual">
+          <button class="govuk-button govuk-button--secondary govuk-!-margin-bottom-0" data-module="govuk-button" type="submit">Unlink nDelius record</button>
+        </form>
+      </div>
     {% endif %}
 
     <div class="pac-key-details-bar__top-block">
