:bug: Corrected display of possible matches
:sparkles: Includes CRN lookup and error message that was missed on PIC-647
Removed duplicate scenarios from BDD resulting from merge
Made 1st page of case list data more consistent with real data

Signed-off-by: Paul Massey <paul.massey@digital.justice.gov.uk>

--- a/server/views/match-manual.njk
+++ b/server/views/match-manual.njk
@@ -21,6 +21,9 @@
         {% if session.formInvalid %}
             {%- set errorText = "Enter the CRN in the correct format" -%}
         {% endif %}
+        {% if session.crnInvalid %}
+            {%- set errorText = "No records match the CRN provided" -%}
+        {% endif %}
         {{ govukErrorSummary({
             titleText: "There is a problem",
             errorList: [
@@ -60,13 +63,8 @@
                     {% from "govuk/components/input/macro.njk" import govukInput %}
                     {% if session.formError %}
                         {%- set errorMessage = {
-                            text: "You must enter a case reference number"
+                            text: errorText
                         } -%}
-                        {% if session.formInvalid %}
-                            {%- set errorMessage = {
-                                text: "Enter the CRN in the correct format"
-                            } -%}
-                        {% endif %}
                     {% endif %}
                     {{ govukInput({
                         label: { text: "Case reference number (CRN)" },
