--- a/server/views/case-summary.njk
+++ b/server/views/case-summary.njk
@@ -16,7 +16,7 @@
         matchType: session.confirmedMatch.matchType
     }) }}
 
-    {% if data.numberOfPossibleMatches > 0 and not session.confirmedMatch.name %}
+    {% if data.numberOfPossibleMatches > 1 and not data.crn %}
         {%- from "moj/components/banner/macro.njk" import mojBanner -%}
         {{ mojBanner({
             classes: 'govuk-!-display-inline-block',
@@ -71,7 +71,6 @@
                     {% endfor %}
                 </div>
             {% endif %}
-
 
             <h2 class="govuk-heading-m govuk-!-margin-top-9">
                 Defendant details
