:bug: Fixes incorrect display of unmatched defendants
Signed-off-by: Paul Massey <paul.massey@digital.justice.gov.uk>

--- a/server/views/match-records.njk
+++ b/server/views/match-records.njk
@@ -10,7 +10,7 @@
 } %}
 
 {% for item in data %}
-    {% if item.numberOfPossibleMatches %}
+    {% if item.numberOfPossibleMatches and not item.crn %}
         {%- set tableRow = [
             { text: item.defendantName | escape },
             { text: item.numberOfPossibleMatches | escape },
