:bug: Fixed Back link from match defendant screen
Included BDD tests

Signed-off-by: Paul Massey <paul.massey@digital.justice.gov.uk>

--- a/server/views/match-defendant.njk
+++ b/server/views/match-defendant.njk
@@ -3,7 +3,7 @@
 {% if session.matchType === 'bulk' %}
     {%- set backUrl = '/match/' + session.matchType + '/' + session.matchDate -%}
 {% else %}
-    {%- set backUrl = '/case/' + data.caseNo + '/details' -%}
+    {%- set backUrl = '/case/' + data.caseNo + '/summary' -%}
 {% endif %}
 
 {% block backlink %}
